Use webkit scrollbars to prevent resizing issues

--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -19,3 +19,11 @@
   flex: 1;
   flex-direction: row;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1);
+}
