--- a/app/containers/Panel.css
+++ b/app/containers/Panel.css
@@ -2,5 +2,8 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-right: 5px;
+  border: 1px solid black;
 }
